force-app/main/default/objects/Workflow_Audit_Log__e/Workflow_Audit_Log__e.object-meta.xml
<CustomObject>
    <description>The workflow audit log platform event is used to log errors or exceptions encountered during a workflow, providing an audit trail without interrupting the process flow.</description>
    <label>Workflow Audit Log</label>
    <pluralLabel>Workflow_Audit_Log</pluralLabel>
</CustomObject>