force-app/main/default/objects/Workflow_Audit_Log__e/fields/Audit_Text__c.field-meta.xml
<CustomField>
    <fullName>Audit_Text__c</fullName>
    <label>Audit Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>