force-app/main/default/objects/Workflow_Audit_Log__e/fields/Interface_Context__c.field-meta.xml
<CustomField>
    <fullName>Interface_Context__c</fullName>
    <label>Interface Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>