force-app/main/default/objects/Workflow_Audit_Log__e/fields/Primary_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_ID__c</fullName>
    <label>Primary Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>