force-app/main/default/objects/Workflow_Audit_Log__e/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>