force-app/main/default/objects/Workflow_Audit_Log__e/fields/Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Stage__c</fullName>
    <label>Workflow Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>