force-app/main/default/objects/Workflow_Audit_Log__e/fields/Workflow_Type__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Type__c</fullName>
    <label>Workflow Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>